# bio-path-ff-BOVIN

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AIM2-TRAINING-PLAN.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
bovin_demo/: __init__.py  cli.py  tools_inline_logrank.py
bovin_demo/data/: __init__.py  build.py  dataset.py  gene_mapping.py  ici_loader.py  labels.py  sade_loader.py  split.py  tcga_loader.py
bovin_demo/data/static/: bovin_gene_aliases.csv  cloughesy_manual_labels.TODO.md  cloughesy_manual_labels.csv
bovin_demo/eval/: __init__.py  aim2_report.py  external_transfer.py  hypothesis_tests.py  luad_transfer.py  metrics.py  report.py
bovin_demo/graph/: __init__.py  bovin_pathway_v0.json  heterodata.py  loader.py  schema.py
bovin_demo/model/: __init__.py  baseline_mlp.py  hetero_gnn.py  readout.py
bovin_demo/train/: __init__.py  lit_module.py  loop.py
bovin_demo/xai/: __init__.py  aggregate.py  ig_captum.py  runner.py  viz.py
configs/: default.yaml  ici_pool.yaml  tcga_coad.yaml
data/: DATACARD.md  checksums.txt  checksums_luad.txt
docs/: RELEASE_NOTES_v0.1-demo.md  RELEASE_NOTES_v0.2-aim2.md  demo_card.md
notebooks/: 01_explore_original_data.ipynb  02_database_inspector.html  02_database_inspector.ipynb  03_ici_pool_inspector.ipynb  _build_03_inspector.py
tests/: conftest.py  test_data.py  test_eval.py  test_graph_loader.py  test_heterodata.py  test_ici_loader.py  test_model.py  test_smoke_import.py  test_train.py  test_xai.py
tools/: build_bovin_gene_aliases.py  combine_gnn_rf.py  download_ici_pool.sh  download_tcga_coad.sh  download_tcga_luad.sh  dump_crt_quartile_ranking.py  explain_heatmap.py  merge_loco_summaries.py  parse_graph_v0.py  peng_fig1c_gepia2_style.py  render_graph_overview.py  render_model_comparison.py  render_training_curve.py  replicate_peng_fig1.py  run_ici_loco.py  run_rf_loco.py  train_crt_quartile.py  validate_surrogate.py  walkthrough_compare.py  walkthrough_one_patient.py
